Correction design navbar on Mobile + adding meta description + adding favicon.

--- a/public/assets/style/tailwind.css
+++ b/public/assets/style/tailwind.css
@@ -29,7 +29,7 @@
     @apply font-Spartan text-base font-bold tracking-widest text-white;
   }
   .list_mobile_container {
-    @apply flex flex-row justify-between py-2;
+    @apply flex flex-row justify-between py-4;
   }
   .planet_image {
     @apply w-1/3 md:w-3/6 lg:w-5/6;
